<resources>
    <string name="app_name">Brake Sensor</string>

    <string name="bleOn">Bluetooth</string>
    <string name="leftFrontTemp">LF</string>
    <string name="rightFrontTemp">RF</string>
    <string name="leftRearTemp">LR</string>
    <string name="rightRearTemp">RR</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="control_panel">Control Panel</string>
    <string name="datalogging">Datalogging</string>
    <string name="appearance">Appearance</string>
    <string name="title_activity_control_panel">ControlPanelActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="server_reset">Server Reset</string>
    <string name="client_hardware_reset">Client Hardware Reset</string>
    <string name="client_software_reset">Client Software Reset</string>
    <string name="axles">Axles</string>
    <string name="get_mac_addresses">Get MAC Addresses</string>
    <string name="force_scan">Force Scan</string>
    <string name="textview">TextView</string>
    <string name="sleep_all">Sleep All</string>
    <string name="sleep_sensor">Sleep Sensor</string>
    <string name="reset">Reset</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="save">Save</string>
    <string name="sleep">Sleep</string>
    <string name="scan">Scan</string>
    <string name="get">Get</string>
    <string name="overheat">Overheat Warning</string>
    <string name="low_batt">Low Battery</string>
    <string name="sensor_disconnect">Sensor Disconnect</string>
    <string name="repeater_disconnect">Repeater Disconnect</string>

    <string-array name="messages">
        <item>Overheat Warning</item>
        <item>Low Battery</item>
        <item>Sensor Disconnect</item>
        <item>Repeater Disconnect</item>
    </string-array>

    <string-array name="posit_array">
        <item>LF</item>
        <item>RF</item>
        <item>LC</item>
        <item>RC</item>
        <item>LR</item>
        <item>RR</item>
    </string-array>
    <string name="title_activity_data_logging">DataLogging</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">Sensor Channel</string>
    <string name="channel_description">My Channel</string>
    <string name="stock_ticker">Stock Ticker</string>
    <string name="period">Period</string>
    <string name="_1_day">1 Day</string>
    <string name="_30_days">30 Days</string>
    <string name="_90_days">90 Days</string>
    <string name="_12_months">12 Months</string>
    <string name="price_interval">Price Interval</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="price_data_sets">Price Data Sets</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="close">Close</string>
    <string name="get_prices">Get Prices</string>

</resources>