<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="387dp"
        android:layout_height="671dp"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="146dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtAxles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/axles" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSaveAxle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtServerReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/server_reset" />

            <Button
                android:id="@+id/btnServerReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSWClient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/client_software_reset" />

            <Button
                android:id="@+id/btnSWReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHWClient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/client_hardware_reset" />

            <Button
                android:id="@+id/btnHWReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMacRequest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/get_mac_addresses" />

            <Button
                android:id="@+id/btnGetMAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSleepSensor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/sleep_sensor"
                android:textAlignment="viewEnd" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="85dp"
                android:layout_height="43dp"
                android:entries="@array/posit_array" />

            <Button
                android:id="@+id/btnSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSleepAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/sleep_all" />

            <Button
                android:id="@+id/btnSleepAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sleep All" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/force_scan"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/btnScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>